x.y.z
=====

New features:

Bug fixes:

* Fix GitHub Issue #150: Ghost handles crash
* Fix GitHub Issue #148: Instant node creation not aligned with the grid

Other:

* Refactor dialogs to use more standard components

2.3.0
=====

New features:

* Fix GitHub Issue #140: Double-click to create a new node
* Add setting to select node group by intersection

Bug fixes:

* Fix GitHub Issue #143: Inexact node selection
  - Make connecting nodes by dragging easier
  - Render node handles as separate scene objects

Other:

* Fix GitHub Issue #125: Add support for Qt 6

2.2.0
=====

New features:

* Fix GitHub Issue #126: Extending limit of the canvas/background
  - The drawing area is now unlimited

* Fix GitHub Issue #128: Make it possible to connect selected nodes
  - Nodes can be connected in the selection order via Edit menu

* Fix GitHub Issue #133: Make it possible to disconnect selected nodes
  - Selected nodes can be disconnected via Edit menu

Bug fixes:

* Fix the way a node is selected on right-click

* Fix copy paste from background context menu

* Disable optimization buttons when optimization in progress

* Don't create Text element if edge text is empty

* Don't create Text element if node text is empty

Other:

* Make a distinction between general colors and node colors

* Make zooming nonlinear and increase range

* Make pasting of big group of nodes much faster

* Clear selected nodes when a handle of unselected node is clicked

2.1.0
=====

Other:

* Updated Dutch translations

2.0.0
=====

New features:

* Fix GitHub Issue #115: Missing Hotkey for Fullscreen: F11

* Fix GitHub Issue #119: Implement group actions
  - Make it possible to move group by move handle
  - Make it possible to set text color for a node group
  - Make it possible to set color for a node group
  - Make it possible to set attached image for a node group
  - Allow group action when setting colors via node handle
  - Allow deletion of multiple nodes
